--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,8 +3,8 @@ version = 3.2.1
 runner.dialect = scala3
 
 maxColumn = 200
-# assumeStandardLibraryStripMargin = false
-# align.stripMargin = true
+assumeStandardLibraryStripMargin = false
+align.stripMargin = true
 # 尽可能删除换行符
 # newlines.source = fold
 
