--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+        <scala.major>2.13</scala.major>
         <scala.version>2.13.7</scala.version>
         <log4j.version>2.17.0</log4j.version>
     </properties>
@@ -25,7 +26,7 @@
 
         <dependency>
             <groupId>org.scala-lang.modules</groupId>
-            <artifactId>scala-parallel-collections_2.13</artifactId>
+            <artifactId>scala-parallel-collections_${scala.major}</artifactId>
             <version>1.0.4</version>
         </dependency>
 
@@ -33,6 +34,12 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>${log4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.scalaj</groupId>
+            <artifactId>scalaj-http_${scala.major}</artifactId>
+            <version>2.4.2</version>
         </dependency>
     </dependencies>
 
