--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,16 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_${scala.major}</artifactId>
             <version>3.2.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.scala-lang.modules</groupId>
+                    <artifactId>scala-parallel-collections_${scala.major}</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
